--- a/src/main/resources/static/css/h5/sweepCodeRed/common.css
+++ b/src/main/resources/static/css/h5/sweepCodeRed/common.css
@@ -44,5 +44,5 @@ button:focus{
 .payway i:nth-child(1){padding-right:.4rem;}
 .payway i:nth-child(2){float: right;color: #999;}
 
-.toast{position: fixed;top: 50%;left: 35%;}
-.toast div{background: rgba(0, 0, 0,.7);color: #fff;display: inline-block;height: 1rem;line-height: 1rem;padding:0 .6rem;border-radius: .2rem;}
+.toast{position: fixed;top: 0;display: flex;justify-content: space-around;justify-items: center;z-index: 9999;display: flex;justify-content: center;align-items: center;width: 100%;height: 100%;}
+.toast span{background: rgba(0, 0, 0,.7);color: #fff;display: inline-block;height: 1rem;line-height: 1rem;padding:0 .6rem;border-radius: .2rem;}
