--- a/src/main/resources/templates/h5/sweepCodeRed/index.html
+++ b/src/main/resources/templates/h5/sweepCodeRed/index.html
@@ -77,7 +77,7 @@
 	</div>
 
 	<div class="toast">
-		<div>土司土司</div>
+		<span></span>
 	</div>
 </div>
 </body>
@@ -87,6 +87,7 @@
 <script>
 	var carNumber = $("#carNumber").text() ;
 	$(function(){
+		$(".toast").hide();
 		if(carNumber != "" && carNumber != undefined) {
 			detailsShow()
 		}
@@ -130,15 +131,22 @@
 			dataType : 'json',
 			data : {carNumber: carNumber},
 			success: function (json) {
-				console.log("Json checkCost Data: " + JSON.stringify(json))
-				//alert(json.msg) ;
-				$(".toast div").text(json.msg) ;
+				console.log("Json checkCost Data: " + JSON.stringify(json)) ;
+				toast(json.msg);
 				if("SUCCESS" == json.msg) {
 					flag = 2 ;
 				}
 			}
 		}) ;
 		return flag ;
+	}
+
+	function toast(msg) {
+		$(".toast span").text(msg) ;
+		$(".toast").show();
+		setTimeout(function () {
+			$(".toast").hide();
+		}, 1000);
 	}
 	//获取支付详情
 	function getPayDetails(carNumber) {
