--- a/src/main/resources/templates/h5/sweepCodeRed/index.html
+++ b/src/main/resources/templates/h5/sweepCodeRed/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 <div>
-	<span hidden id="code" th:text="${code}"></span>
+	<span hidden id="openId" th:text="${openId}"></span>
 	<span hidden id="carNumber" th:text="${parkingRecord.carNumber}"></span>
 	<span hidden id="recordId" th:text="${parkingRecord.recordId}"></span>
 	<h3 class="h3">智慧停车 即可开启</h3>
@@ -46,7 +46,7 @@
 			<div>
 				<h3 class="tit">停车详情</h3>
 				<p>停车场:<span class="parkingName" th:text="${parkingRecord.parkingName}"></span></p>
-				<p>停车时长：<span class="takeMinutes" th:text="${parkingRecord.takeMinutes/60 >=1 ? parkingRecord.takeMinutes/60 + '小时' + parkingRecord.takeMinutes%60 + '分钟' : parkingRecord.takeMinutes/60 + '分钟'}"></span></p>
+				<p>停车时长：<span class="takeMinutes" th:text="${parkingRecord.takeMinutes/60 >=1 ? parkingRecord.takeMinutes/60 + '小时' + parkingRecord.takeMinutes%60 + '分钟' : parkingRecord.takeMinutes + '分钟'}"></span></p>
 				<p>入场时间:<span class="inTime" th:text="${parkingRecord.inTime}"></span></p>
 				<p>停车费:<span><em class="cost" th:text="${parkingRecord.cost}"></em>元</span></p>
 			</div>
@@ -60,7 +60,7 @@
 			<p style="height:10px;background: #f7f7f7;"></p>
 			<div class="notice">
 				<h3 class="tit">注意事项</h3>
-				<p>1.请您支付停车费时，先确认车牌号；</p>
+				<p>1.请您支付停车费时，先确认停车信息及车牌号；</p>
 				<p>2.支付成功若没抬杆，请联系工作人员；</p>
 				<p>3.请尽快驶离车场，避免产生额外费用；</p>
 			</div>
@@ -106,22 +106,20 @@
 	});
 	//点击支付
 	function payOrder() {
-        code = $("#code").text() ;
+		openId = $("#openId").text() ;
 		recordId = $("#recordId").text() ;
 		money = $("#cost").text() ;
-		console.log("点击支付传过来的值：{},{}" + recordId + "," + money)
-		console.log("code code = " + code)
-		if(typeof(typeof(code) != "undefined" && recordId) != "undefined" && typeof(money) != "undefined") {
+		console.log("点击支付传过来的值：" + openId + ',' + recordId + "," + money)
+		if(typeof(openId) != "undefined" && typeof(recordId) != "undefined" && typeof(money) != "undefined") {
 			$.ajax({
 				url : '/mp/wx-pay/prepay' ,
 				type: 'POST',
 				dataType : 'json',
 				contentType: "application/json;charset=UTF-8",
-				data: JSON.stringify({code: code, recordId: recordId, money: money }),
+				data: JSON.stringify({openId: openId, recordId: recordId, money: money }),
 				success: function (data) {
 					console.log("[Json payOrder Data: ]" + JSON.stringify(data))
 					doBridgeReady(data);
-					console.log("appId:" + data.appId);
 				},
 				error: function (res) {
 					console.log("ajax请求失败,res:" + res.toString());
@@ -156,9 +154,10 @@
 				},
 				function(res){
 					if(res.err_msg == "get_brand_wcpay_request:ok" ) {
-						self.location.href="/mp/watchPay/forward" ;
+						self.location.href="/mp/watchPay/forward?recordId=" + $("#recordId").text() ;
 					}else{
-						alert("支付失败，提示【" + res.err_msg + "】");
+						console.log("支付失败，提示【" + res.err_msg + "】")
+						alert("支付失败，请重新支付！");
 					}
 				}
 		);
@@ -221,6 +220,9 @@
 					$(".cost").text(json.data.cost) ;
 					$("#cost").text(json.data.cost) ;
 					$(".carNumber").text(json.data.carNumber) ;
+					if(json.data.cost <= 0) {
+						$(".paybtn").unbind("click") ;
+					}
 				}
 			}
 		}) ;
