--- a/src/main/resources/templates/system/car/business/car.html
+++ b/src/main/resources/templates/system/car/business/car.html
@@ -12,10 +12,10 @@
 							<button shiro:hasPermission="sys:car:business:add" type="button" class="btn  btn-primary" onclick="add()">
 								<i class="fa fa-plus" aria-hidden="true"></i>添加
 							</button>
-							<button shiro:hasPermission="sys:car:business:batchRemove" type="button" class="btn  btn-danger"
+<!--							<button shiro:hasPermission="sys:car:business:batchRemove" type="button" class="btn  btn-danger"
 								onclick="batchRemove()">
 								<i class="fa fa-trash" aria-hidden="true"></i>删除
-							</button>
+							</button>-->
 						</div>
 						<div class="columns pull-right">
 							<button class="btn btn-success" onclick="reLoad()">查询</button>
